Feature/sprint 4: Membership, roles & settings (#41) (#41)
* Feature/sprint 4: Membership, roles & settings (#41)

Implement Sprint 4 deliverables: membership by email with pending invitations
and auto-conversion on first OIDC login, role overrides at project/environment
level, audit log query endpoints, workspace/project/environment settings
(quota, registry, security), environment token max lifetime enforcement,
web console settings pages, and CLI token/member commands.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>

* Refactor tech debt tracker: remove linter plan, add Hibernate JSON serialization note

* Refactor tech debt tracker: remove linter plan, add Hibernate JSON serialization note

* Fix spec violations found in review: token validation, role overrides, SecuritySettings

- Token expiresInDays is now required (reject null/zero with 422 per spec)
- Token lifetime exceeded returns 422 via new ValidationException
- CreateEnvironmentTokenResponse includes role field per spec
- Token createdBy returns email instead of UUID per spec
- Role overrides validate elevation-only (reject if not higher than inherited)
- SecuritySettings schema corrected to runtimeClassName per spec
- Extract shared JsonUtil, inject Spring ObjectMapper bean

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>

* Add audit log query filters, fix N+1 token query, lint all code

- Add actorId, from, to query params to audit log endpoints (spec compliance)
- Add 422 response to token creation and role override API specs
- Fix N+1 query in EnvironmentTokenService.listTokens (batch user lookup)
- Fix SPEC.md audit log params to use page/size (consistent with all endpoints)
- Add audit log context projectId/environmentId to TECHDEBT.md
- Run Prettier on all frontend code
- Add lint/format instructions to CLAUDE.md

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>

* Run gofmt on generated OpenAPI Go client

Co-Authored-By: Claude Opus